# edix-1

./: Cargo.toml  README.md  default-text.txt  index.html  main.js  style.css
pkg/: bundle.js  edix_1.js  edix_1_bg.wasm
src/: app.rs  content.rs  controller.rs  cursor.rs  highlight.rs  lib.rs  test.rs
