[package]
name = "edix-1"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.17"
js-sys = "0.3.40"
syntect = { version="4.2", default-features = false, features = ["default-fancy"]}
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "Selection",
  "Window",
  "Document",
  "console",
  "DomRect",
]
